--- a/Resources/Private/Language/ExtConf.xlf
+++ b/Resources/Private/Language/ExtConf.xlf
@@ -3,20 +3,20 @@
 	<file source-language="en" datatype="plaintext" original="messages" date="2020-04-11T08:57:40Z" product-name="sfmailshop">
 		<header/>
 		<body>
-			<trans-unit id="emailFromAddress" xml:space="preserve">
-				<source>email from address: The senders email address. If not given the extension tries to get one from INSTALL_TOOL.</source>
+			<trans-unit id="emailFromAddress">
+				<source>Email from address: The senders email address. If not given the extension tries to get one from INSTALL_TOOL.</source>
 			</trans-unit>
-			<trans-unit id="emailFromName" xml:space="preserve">
-				<source>email from name: The senders email name. If not given the extension tries to get one from INSTALL_TOOL.</source>
+			<trans-unit id="emailFromName">
+				<source>Email from name: The senders email name. If not given the extension tries to get one from INSTALL_TOOL.</source>
 			</trans-unit>
-			<trans-unit id="emailToAddress" xml:space="preserve">
-				<source>email to address: The recipients email address.</source>
+			<trans-unit id="emailToAddress">
+				<source>Email to address: The recipients email address.</source>
 			</trans-unit>
-			<trans-unit id="emailToName" xml:space="preserve">
-				<source>email to name: The recipients email name.</source>
+			<trans-unit id="emailToName">
+				<source>Email to name: The recipients email name.</source>
 			</trans-unit>
-			<trans-unit id="emailSubject" xml:space="preserve">
-				<source>email subject: The subject of the order mail.</source>
+			<trans-unit id="emailSubject">
+				<source>Email subject: The subject of the order mail.</source>
 			</trans-unit>
 		</body>
 	</file>
