--- a/Resources/Private/Language/de.ExtConf.xlf
+++ b/Resources/Private/Language/de.ExtConf.xlf
@@ -3,24 +3,24 @@
 	<file source-language="en" datatype="plaintext" original="messages" date="2020-04-11T08:57:40Z" product-name="sfmailshop">
 		<header/>
 		<body>
-			<trans-unit id="emailFromAddress" xml:space="preserve">
-				<source>email from address: The senders email address. If not given the extension tries to get one from INSTALL_TOOL.</source>
+			<trans-unit id="emailFromAddress">
+				<source>Email from address: The senders email address. If not given the extension tries to get one from INSTALL_TOOL.</source>
 				<target>E-Mail FROM: Die E-Mail-Adresse des Absenders. Wenn nicht angegeben, dann wird die konfigurierte E-Mail-Adresse aus dem Installtool verwendet.</target>
 			</trans-unit>
-			<trans-unit id="emailFromName" xml:space="preserve">
-				<source>email from name: The senders email name. If not given the extension tries to get one from INSTALL_TOOL.</source>
+			<trans-unit id="emailFromName">
+				<source>Email from name: The senders email name. If not given the extension tries to get one from INSTALL_TOOL.</source>
 				<target>E-Mail FROM Name: Der Name des Absenders. Wenn nicht angegeben, dann wird der konfigurierte Name aus dem Installtool verwendet.</target>
 			</trans-unit>
-			<trans-unit id="emailToAddress" xml:space="preserve">
-				<source>email to address: The recipients email address.</source>
+			<trans-unit id="emailToAddress">
+				<source>Email to address: The recipients email address.</source>
 				<target>E-Mail TO: Die Empfänger E-Mail-Adresse</target>
 			</trans-unit>
-			<trans-unit id="emailToName" xml:space="preserve">
-				<source>email to name: The recipients email name.</source>
+			<trans-unit id="emailToName">
+				<source>Email to name: The recipients email name.</source>
 				<target>E-Mail TO Name: Der Empfänger Name</target>
 			</trans-unit>
-			<trans-unit id="emailSubject" xml:space="preserve">
-				<source>email subject: The subject of the order mail.</source>
+			<trans-unit id="emailSubject">
+				<source>Email subject: The subject of the order mail.</source>
 				<target>E-Mail Betreff: Der Betreff der Bestell-Mail</target>
 			</trans-unit>
 		</body>
